...
    }
  }

  String get label {
    switch (this) {
      case VisitType.defaultType:
        return 'Výchozí';
      case VisitType.initial:
        return 'Vstupní';
      case VisitType.followup:
        return 'Kontrolní';
      case VisitType.gastroscopy:
        return 'Gastroskopie';
      case VisitType.colonoscopy:
        return 'Koloskopie';
      case VisitType.ultrasound:
        return 'Ultrazvuk';
...
